<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    android:padding="25dp"
    android:orientation="vertical"
    android:gravity="center_horizontal|top"
    >

    <TextView
        android:id="@+id/txtvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtWelcomeSystem"
        android:textSize="26sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="12dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtvYourInformation"
        android:text="@string/txtInformation"
        android:textColor="@color/color_gray_system"
        android:textSize="19sp"
        android:fontFamily="casual"
        android:layout_marginTop="25dp"
        android:layout_gravity="start"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        >

        <TextView
            android:id="@+id/tvNameWithout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/color_front_data_system"
            android:text="@string/txtNameWithout"
            android:layout_marginTop="20dp"
            android:layout_gravity="start"
            />

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            />

        <TextView
            android:id="@+id/txtvYourName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/color_data_system"
            android:text="@string/txtName_Actv2"
            android:fontFamily="casual"
            android:layout_marginTop="20dp"
            android:layout_gravity="start"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tvCedWithout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/color_front_data_system"
            android:text="@string/txtCedWithout"
            android:layout_marginTop="20dp"
            android:layout_gravity="start" />

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            />

        <TextView
            android:id="@+id/txtvCed_Actv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:text="@string/textCed_actv2"
            android:fontFamily="casual"
            android:textColor="@color/color_data_system"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAddressWithout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/color_front_data_system"
            android:text="@string/txtAddressWithout"
            android:layout_marginTop="20dp"
            android:layout_gravity="start" />

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            />

        <TextView
            android:id="@+id/txtvAddress_Actv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:text="@string/textAddress_actv2"
            android:fontFamily="casual"
            android:textColor="@color/color_data_system"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAgeWithout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/color_front_data_system"
            android:text="@string/txtAgeWithout"
            android:layout_marginTop="20dp"
            android:layout_gravity="start" />

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            />

        <TextView
            android:id="@+id/txtvAge_Actv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:text="@string/textAge_actv2"
            android:fontFamily="casual"
            android:textColor="@color/color_data_system"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNumberWithout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/color_front_data_system"
            android:text="@string/txtNumberWithout"
            android:layout_marginTop="20dp"
            android:layout_gravity="start" />

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            />

        <TextView
            android:id="@+id/txtvNumber_Actv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:text="@string/textNumber_actv2"
            android:fontFamily="casual"
            android:textColor="@color/color_data_system"
            android:textSize="17sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal|bottom"
        android:backgroundTint="@color/colorTintBtnAdd"
        android:drawableStart="@drawable/ic_back"
        android:text="@string/txtBtn_back_actv2"
        android:textColor="@color/color_white"
        android:fontFamily="monospace"
        android:textSize="19dp"
        android:onClick="showMain1"
        />

</LinearLayout>