<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:textColor="@color/color_front_data_system"
        android:textSize="38sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:text="@string/aboutApp"
        android:textColor="@color/color_data_system"/>

    <!-- ScrollView -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        >

        <!-- LinearLayout -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtxtName"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:ems="7"
                    android:hint="@string/txtName"
                    android:inputType="textPersonName"
                    tools:ignore="AutoFill" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtxtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:ems="7"
                    android:hint="@string/txtLastName"
                    android:inputType="textPersonName"
                    tools:ignore="AutoFill" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="11"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/edtxtCed"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:ems="7"
                    android:hint="@string/txtCed"
                    android:inputType="number"
                    tools:ignore="AutoFill" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtxtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:ems="7"
                    android:hint="@string/txtAddress"
                    android:inputType="textPersonName"
                    tools:ignore="AutoFill" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="2"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/edtxtAge"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:ems="7"
                    android:hint="@string/txtAge"
                    android:inputType="number"
                    tools:ignore="AutoFill" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/edtxtNumber"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:ems="7"
                    android:hint="@string/txtNumber"
                    android:inputType="phone"
                    tools:ignore="AutoFill" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/colorTintBtnAdd"
                android:drawableStart="@drawable/ic_plus_box"
                android:onClick="showActivitySystem"
                android:text="@string/txtBtnAdd"
                android:textColor="@color/color_white"
                android:fontFamily="monospace"
                android:textSize="19dp"
                />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>